Sat Oct  2 18:04:57 PDT 1999
(Raster)

fix "saying no to logout dialog stops windows form being de-iconified"

-------------------------------------------------------------------------------

Sat Oct  2 18:08:37 PDT 1999
(Raster)

get rid of warning

-------------------------------------------------------------------------------

Sat Oct  2 18:11:31 PDT 1999
(Raster)

rtemove reply from ipc iclass apply - more efficient - this WILL break eterm
automode (well it will braak eterm) until eterm is updated :)
sorry kainx  :)

-------------------------------------------------------------------------------

Sat Oct  2 18:59:21 PDT 1999
(Raster)

needed to fix the iclass ipc stuff a bit to make it more useful in the long
run

-------------------------------------------------------------------------------

Sat Oct  2 20:45:20 PDT 1999
(Raster)

chaneg menu entry name, fix some bits of the ipcs and remove useless \n's in
ipc returns...

-------------------------------------------------------------------------------

Sat Oct  2 21:20:50 PDT 1999
(Raster)

add $EBIN as env variable.. need for scripts.. :)

-------------------------------------------------------------------------------

Sun Oct  3 00:45:11 PDT 1999
(Raster)

get textclas ipc right....

-------------------------------------------------------------------------------

Sun Oct  3 01:11:42 PDT 1999
(Raster)

and save snapsh when the ipc is called....

-------------------------------------------------------------------------------

Sun Oct  3 11:44:39 PDT 1999
(Mandrake)

if the focus changes, we crush any open but un-stuck windows to avoid any
bizarre problems this may cause later

-------------------------------------------------------------------------------

Sun Oct  3 11:45:28 PDT 1999
(Raster)

change menu scroll dist to 4 pixels

-------------------------------------------------------------------------------

Sun Oct  3 12:03:22 PDT 1999
(Raster)

bad theme dialog added so people knwo they chose a bad theme...